--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
   "lint-staged": {
     "*.tsx": [
       "prettier --write",
-      "eslint --cache --fix",
-      "git add"
+      "eslint --cache --fix"
     ]
   }
 }
