feat: add config

--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     }
   },
   "lint-staged": {
-    "*.tsx": [
+    "*.{tsx,ts}": [
       "prettier --write",
       "eslint --cache --fix"
+    ],
+    "*.{css,less,scss,html}": [
+      "prettier --write"
     ]
   }
 }
