--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "files": [],
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "baseUrl": ".",
+    "noUnusedLocals": false,
+    // 非相对模块导入的路径映射配置
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
